monitoramento de tempo médio das ordens de serviç
